--- a/cadastro.html
+++ b/cadastro.html
@@ -302,13 +302,25 @@
                 </ul>
             </div>
             <div id="div6">
-                <h1 id="txt txtH1">Termos e Condições</h1>
-                <h1 id="txt txtH2">Com base na sua permissão, personalizaremos anúncios e recomendações que podem corresponder aos seus interesses.
+                <h1 class="txt txtH1">Termos e Condições</h1>
+                <h1 class="txt txtH2">Com base na sua permissão, personalizaremos anúncios e recomendações que podem corresponder aos seus interesses.
                     <br><br>
                     A Razer respeita sua privacidade, assim, suas configurações de permissão podem ser alteradas a qualquer momento na página do seu perfil do Razer ID.
-                    <br><br>
-                    Você aceita os Terms of Service e a Privacy Policy?
+                    <br><br><br>
+                    Você aceita os <a class="verde" href="https://www.razer.com/legal/services-and-software-terms-of-use?_ga=2.245274053.1152954060.1691185264-1305927478.1691185264" target="_blank">Terms of Service</a> e a <a class="verde" href="https://www.razer.com/legal/customer-privacy-policy?_ga=2.2609776.1152954060.1691185264-1305927478.1691185264" target="_blank">Privacy Policy</a>?
                 </h1>
+            </div>
+            <div id="divBtn">
+                <h1 class="txt" id="txtCaptcha">Sou humano</h1>
+                <button id="btnCaptcha"><div type="checkbox" id="inputCaptcha"></div></button>
+            </div>
+            <div id="div7">
+                <button id="btnA">ACEITAR E CRIAR</button>
+            </div>
+            <div id="div8">
+                <h1 class="txt" id="txtH3">Já tem uma conta?</h1>
+                <br><br>
+                <a href="login.html" class="txt" id="txtH4">Entrar <span class="verde">></span></a>
             </div>
         </div>
         
