--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
                     <a href="esqueceuSenha.html" id="esqueceuSenha">Esqueceu a senha?</a>
                 </div>
                 <div id="divBtnLogin" class="txt">
-                    <button id="btnLogin">LOG IN</button>
+                    <button id="btnLogin" onclick="guardaLogin()">LOG IN</button>
                 </div>
                 <div id="divCadastro" class="txt">
                     <h1>Ainda não tem uma conta?</h1>
@@ -77,6 +77,7 @@
             <a class="txt" href="https://www.razer.com/legal/customer-privacy-policy?_ga=2.237366275.222401743.1690580957-227080165.1690580957">Política de Privacidade</a>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
