--- a/esqueceuSenha.html
+++ b/esqueceuSenha.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <div id="cabecalho">   
+        <div id="cabecalho">
             <img id="imgLogo" src="img/razer_logo.jpg" alt="Razer logo">
             <a class="txt txtH">Razer ID</a>
         </div>
@@ -28,14 +28,15 @@
                 <h1 class="txt">Com qual conta Razer ID você está tendo problemas de acesso?</h1>
             </div>
             <div id="div3" class="displayN">
-                <h1 class="txt2">Se não tiver mais acesso ao seu e-mail, entre em contato com <span class="verde">Suporte Razer</span></h1>
+                <h1 class="txt2">Se não tiver mais acesso ao seu e-mail, entre em contato com <span
+                        class="verde">Suporte Razer</span></h1>
             </div>
             <div class="txt" id="redefinido" style="display: none;">
                 <h1>Email com pedido de redefinição de senha enviado!</h1>
                 <a href="login.html" id="btnVoltar">VOLTAR</a>
             </div>
             <div id="div4" class="displayN">
-                <input type="text" placeholder="RAZER ID EMAIL OR RECOVERY EMAIL" required>
+                <input id="emailCadastro" type="text" placeholder="RAZER ID EMAIL OR RECOVERY EMAIL" required>
             </div>
             <div id="div5" class="displayN">
                 <a href="login.html"><button id="btn1" class="txt" onclick="">VOLTAR</button></a>
@@ -50,9 +51,13 @@
             <p>|</p>
             <a class="txt" href="https://mysupport.razer.com/app/answers/detail/a_id/3773/">Perguntas Frequentes</a>
             <p>|</p>
-            <a class="txt" href="https://www.razer.com/legal?_ga=2.237366275.222401743.1690580957-227080165.1690580957">Termos legais</a>
+            <a class="txt"
+                href="https://www.razer.com/legal?_ga=2.237366275.222401743.1690580957-227080165.1690580957">Termos
+                legais</a>
             <p>|</p>
-            <a class="txt" href="https://www.razer.com/legal/customer-privacy-policy?_ga=2.237366275.222401743.1690580957-227080165.1690580957">Política de Privacidade</a>
+            <a class="txt"
+                href="https://www.razer.com/legal/customer-privacy-policy?_ga=2.237366275.222401743.1690580957-227080165.1690580957">Política
+                de Privacidade</a>
         </div>
     </footer>
     <script src="script.js"></script>
