--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <div id="cabecalho">   
+        <div id="cabecalho">
             <img id="imgLogo" src="img/razer_logo.jpg" alt="Razer logo">
             <a class="txt txtH">Razer ID</a>
         </div>
@@ -46,17 +46,18 @@
                     <h1 id="h1">ou conecte-se com</h1>
                 </div>
                 <div id="redes">
-                    <a href="https://pt-br.facebook.com/" target="_blank" id="face">
+                    <a href="https://www.facebook.com/login.php?skip_api_login=1&api_key=965511933493262&kid_directed_site=0&app_id=965511933493262&signed_next=1&next=https%3A%2F%2Fwww.facebook.com%2Fdialog%2Foauth%3Fclient_id%3D965511933493262%26redirect_uri%3Dhttps%253A%252F%252Foauth2.razer.com%252Fthirdparty_callback%253Fprovider%253Dfacebook%26response_type%3Dcode%26scope%3Demail%26state%3DgrIcxt6260813509570340584NRDhoBtddi1691444875%26ret%3Dlogin%26fbapp_pres%3D0%26logger_id%3D4e2c9c34-ccc6-4543-b934-774740828388%26tp%3Dunspecified&cancel_url=https%3A%2F%2Foauth2.razer.com%2Fthirdparty_callback%3Fprovider%3Dfacebook%26error%3Daccess_denied%26error_code%3D200%26error_description%3DPermissions%2Berror%26error_reason%3Duser_denied%26state%3DgrIcxt6260813509570340584NRDhoBtddi1691444875%23_%3D_&display=page&locale=pt_BR&pl_dbl=0" target="_blank" id="face">
                         <div>
                             <img src="img/facebook_icon.png" alt="Icone Facebook">
                         </div>
                     </a>
-                    <a href="https://www.google.com.br/?hl=pt-BR" target="_blank" id="google">
+                    <a href="https://accounts.google.com/v3/signin/identifier?opparams=%253F&dsh=S-603032804%3A1691444613176711&access_type=offline&client_id=171035621768-a1p1ce2b5qrjfsfq6hgk62t7ru9an12o.apps.googleusercontent.com&o2v=1&redirect_uri=https%3A%2F%2Foauth2.razer.com%2Fthirdparty_callback%3Fprovider%3Dgoogle&response_type=code&scope=profile+email+openid&service=lso&state=FR553F7688912181655727996slwiaulLOY1691444612&flowName=GeneralOAuthFlow&continue=https%3A%2F%2Faccounts.google.com%2Fsignin%2Foauth%2Fconsent%3Fauthuser%3Dunknown%26part%3DAJi8hAMU-NrryRgY1DeZs1S3oyD2PeG8QVY5dTYSQhIZrQ1mKKoL9gHR3dR4boki3bTuMvz4U6J7fPu-ZLsnIKFhT6SJSJlsZPT0Rcv5W_OHZlA6gZrI4u2kNxEX2WDmj4r-r_nRla7F49oTVROkCwS2vsUbWwTXm9RoWYrETJFDqn1_X_W_iXThbBedFnP_yOlQGNgBHU4tZ1H06kI03NI43UxU-6-T6_8gO14DEZqJeLGFXgR3sbS3FN3WqVpTkXC3HpCtgtleuYI-AJsMgQGl6x-Ec4_TMjgSfFUXsJHI4GnNcwKON8IZLbBPtq_H35ru_L4kfJzPf5c3RtTN5bhaEt4C4ufTt9g19aDpmR-TLS2EHRWrYWSz0bqjYhuaFKESWF_B-yQx-lEKXmUlORLXjxp2TKkPzodNUejV_RW3Km5iEaoKTyS4rWfalCTPdbX6-ffbFXeZDzTs_fIrgGZxNZfc9glMWQ%26as%3DS-603032804%253A1691444613176711%26client_id%3D171035621768-a1p1ce2b5qrjfsfq6hgk62t7ru9an12o.apps.googleusercontent.com%23&app_domain=https%3A%2F%2Foauth2.razer.com&rart=ANgoxcfogzAYypwe-TdE6LNEEbPxlVfVr3LMJtuzCf5PqHVHPNF8OAWnDgXLcYNq5w9J2jZmEAd8JrO4AfcXwIiaH9kbu25Esw"
+                        target="_blank" id="google">
                         <div>
                             <img src="img/google_icon.png" alt="Icone google">
                         </div>
                     </a>
-                    <a href="https://www.twitch.tv/" target="_blank" id="twitch">
+                    <a href="https://www.twitch.tv/login?client_id=4j28c2znix5au9qzuy683wip0xksv5h&redirect_params=client_id%3D4j28c2znix5au9qzuy683wip0xksv5h%26redirect_uri%3Dhttps%253A%252F%252Foauth2.razer.com%252Fthirdparty_callback%253Fprovider%253Dtwitch%26response_type%3Dcode%26scope%3Duser%253Aread%253Aemail%26state%3DsEor5z3776155352766911892RqDVMqgBnp1691444927" target="_blank" id="twitch">
                         <div>
                             <img src="img/twitch_icon.png" alt="Icone Twitch" id="imgT">
                         </div>
@@ -72,9 +73,13 @@
             <p>|</p>
             <a class="txt" href="https://mysupport.razer.com/app/answers/detail/a_id/3773/">Perguntas Frequentes</a>
             <p>|</p>
-            <a class="txt" href="https://www.razer.com/legal?_ga=2.237366275.222401743.1690580957-227080165.1690580957">Termos legais</a>
+            <a class="txt"
+                href="https://www.razer.com/legal?_ga=2.237366275.222401743.1690580957-227080165.1690580957">Termos
+                legais</a>
             <p>|</p>
-            <a class="txt" href="https://www.razer.com/legal/customer-privacy-policy?_ga=2.237366275.222401743.1690580957-227080165.1690580957">Política de Privacidade</a>
+            <a class="txt"
+                href="https://www.razer.com/legal/customer-privacy-policy?_ga=2.237366275.222401743.1690580957-227080165.1690580957">Política
+                de Privacidade</a>
         </div>
     </footer>
     <script src="script.js"></script>
